--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
       
       - run: docker build -t ghcr.io/goggaaa/popa:1337
-      
-      
+      - run: docker push ghcr.io/goggaaa/popa:1337
+      - run: docker run ghcr.io/goggaaa/popa:1337
+
      
